# HBLLaVA

./: .gitignore  README copy.md  README.md  demo_train.jsonl  gt_process.py  pyproject.toml
data/: preprocess.py
data/dataset/: NExTVideo  ScanNet_for_ScanQA_SQA3D
data/gt_files/Nextqa/: nextqa-coldstart-16-p.json
data/gt_files/SpatialReason/: SR_for_qwen.json  SR_for_qwen_1.json  spilt.py  (+7 more)
dataset/: nextqa-coldstart-16.json  nextqa_0-30s.jsonl
hbllava/data/: data_qwen.py  dataset_coldstart.py  rope2d.py  scene_preprocess.py  video_preprocess.py
hbllava/eval/: SpatialReason_evaluator.py  eval_SpatialReason.py  eval_scanqa.py  eval_sqa3d.py  qwen2.5.py  scanqa_evaluator.py  sqa3d_evaluator.py
hbllava/model/: __init__.py  configuration_hbllava.py  load_model.py  modeling_hbllava.py  modeling_hbllava_custom.py
hbllava/train/: __init__.py  hbllava_trainer_reason.py  preprocess_qwen.py  tinyllava_trainer_reason.py  train.py  train_coldstart.py  train_qwen.py
hbllava/training_recipe/: __init__.py  common_recipe.py
hbllava/utils/: arguments.py  data_utils.py
scripts/eval/: eval_SptialReason.sh  eval_scanqa.sh  eval_sqa3d.sh  mvbench.sh  qwen2.5.sh  scanqa.sh
scripts/train/: coldstart.sh  reason.sh  tb_coldstart.sh  train_qwen2.5.sh  train_qwen2_coldstart.sh  train_qwen2_reason_nextqa.sh  train_qwen2_reason_scannet.sh
tinyllava/data/: dataset_coldstart.py  text_preprocess.py
tinyllava/model/: __init__.py  modeling_hbllava.py
tinyllava/train/: hbllava_trainer_reason.py  tinyllava_trainer.py  train.py  train_coldstart.py
tinyllava/utils/: data_utils.py
(+20 files in other folders)
